--- a/src/components/LookupPanel/LookupPanel.css
+++ b/src/components/LookupPanel/LookupPanel.css
@@ -206,7 +206,6 @@
 
 @media (max-width: 720px) {
   .LookupPanel {
-    scroll-snap-align: start;
     scroll-margin-top: calc(72px + env(safe-area-inset-top, 0px));
   }
 
